# WatAnalysis

./: .gitignore  .pre-commit-config.yaml  03.hbond_distribution.ipynb  README.md  pyproject.toml  setup.py  update.sh
.github/workflows/: ci.yml  mirror.yml
WatAnalysis/: analysis.py  bak_basic.py  base.py  dielectric.py  multitrajbase.py  parallel.py  preprocess.py  spectrum.py  temp.py  utils.py  waterdynamics.py  waterstructure.py
WatAnalysis/deprecated/: bak_basic.py  bak_hb_dyn.py
WatAnalysis/hbonds/: m_mda.py  m_pmda.py  postprocess.py
WatAnalysis/proton_transfer/: __init__.py  proton_transfer.py
WatAnalysis/workflow/: __init__.py  base.py  density.py  dipole.py  flux_correlation_function.py  hbonds.py  order_parameter.py  pol_density.py  time_correlation_function.py
doc/source/: conf.py  modules.rst
tests/: 00.water_ccf.ipynb  01.mda_hb.ipynb  02.parallel.ipynb  03.m_pmda.ipynb  water_density.ipynb
tests/PHBA/: analysis.py  check.py  m-mda_all.npy  m-mda_all_parallel.npy  m-mda_interface_parallel.npy  m-mda_interface_serial.npy  parallel.py  parallel.stderr  parallel.stdout  serial.py  serial.stderr  serial.stdout  tests.ipynb  tmp.txt
tests/PHBA_parallel_test/: parallel.py  parallel.stderr  parallel.stdout  run_test.sh  serial.py  serial.stderr  serial.stdout
tests/SelectedTemperature/: test.ipynb  test.py
tests/dielectric/: job.stderr  job.stdout  parallel_test.py  scaling_test.py  serial_test.py
tests/input_data/: coord.xyz  interface.psf
tests/make_graphs/: coord.xyz  test.ipynb  test.py
watdyn/: bak_hb_dyn.py  m_mda.py  parallel.py
(+43 files in other folders)
